ParDesmos.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.0 from ParDesmos.y
-----------------------------------------------------------------------------


-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pExp1 -> Exp1                               (0)
	%start_pExp2 -> Exp2                               (1)
	%start_pExp3 -> Exp3                               (2)
	%start_pExp4 -> Exp4                               (3)
	%start_pExp5 -> Exp5                               (4)
	%start_pExp6 -> Exp6                               (5)
	%start_pExp7 -> Exp7                               (6)
	%start_pExp8 -> Exp8                               (7)
	%start_pExp9 -> Exp9                               (8)
	%start_pExp10 -> Exp10                             (9)
	%start_pExp -> Exp                                 (10)
	%start_pExp11 -> Exp11                             (11)
	Double -> L_doubl                                  (12)
	Integer -> L_integ                                 (13)
	Id -> L_Id                                         (14)
	Exp1 -> Exp1 '=' Exp2                              (15)
	Exp1 -> Exp2                                       (16)
	Exp2 -> Exp2 '+' Exp3                              (17)
	Exp2 -> Exp2 '-' Exp3                              (18)
	Exp2 -> Exp3                                       (19)
	Exp3 -> Exp3 '\\cdot' Exp4                         (20)
	Exp3 -> '-' Exp4                                   (21)
	Exp3 -> Exp4 '!'                                   (22)
	Exp3 -> '\\frac{' Exp3 '}{' Exp4 '}'               (23)
	Exp3 -> Exp4                                       (24)
	Exp4 -> Exp4 '^{' Exp5 '}'                         (25)
	Exp4 -> '\\sqrt{' Exp5 '}'                         (26)
	Exp4 -> '\\sqrt[' Exp6 ']{' Exp5 '}'               (27)
	Exp4 -> Exp5                                       (28)
	Exp5 -> '\\sin\\left(' Exp6 '\\right)'             (29)
	Exp5 -> '\\cos\\left(' Exp6 '\\right)'             (30)
	Exp5 -> '\\tan\\left(' Exp6 '\\right)'             (31)
	Exp5 -> '\\sin^{-1}\\left(' Exp6 '\\right)'        (32)
	Exp5 -> '\\cos^{-1}\\left(' Exp6 '\\right)'        (33)
	Exp5 -> '\\tan^{-1}\\left(' Exp6 '\\right)'        (34)
	Exp5 -> '\\ln' Exp6                                (35)
	Exp5 -> '\\log' Exp6                               (36)
	Exp5 -> Exp6                                       (37)
	Exp6 -> '\\operatorname{mean}\\left(' Exp7 '\\right)'   (38)
	Exp6 -> '\\operatorname{stdev}\\left(' Exp7 '\\right)'   (39)
	Exp6 -> '\\operatorname{stdevp}\\left(' Exp7 '\\right)'   (40)
	Exp6 -> '\\operatorname{nPr}\\left(' Exp7 '\\right)'   (41)
	Exp6 -> '\\operatorname{nCr}\\left(' Exp7 '\\right)'   (42)
	Exp6 -> '\\operatorname{round}\\left(' Exp7 '\\right)'   (43)
	Exp6 -> Exp7 '\\%\\operatorname{of}' Exp8          (44)
	Exp6 -> Exp7                                       (45)
	Exp7 -> '\\left|' Exp8 '\\right|'                  (46)
	Exp7 -> Exp8                                       (47)
	Exp8 -> Exp8 ',' Exp9                              (48)
	Exp8 -> '[' Exp8 ']'                               (49)
	Exp8 -> Exp8 '[' Exp9 ']'                          (50)
	Exp8 -> Exp9                                       (51)
	Exp9 -> 'e'                                        (52)
	Exp9 -> '\\pi'                                     (53)
	Exp9 -> Integer                                    (54)
	Exp9 -> Double                                     (55)
	Exp9 -> Exp10                                      (56)
	Exp10 -> Id                                        (57)
	Exp10 -> Exp11                                     (58)
	Exp -> Exp1                                        (59)
	Exp11 -> '(' Exp ')'                               (60)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!'            { PT _ (TS _ 1) }
	'('            { PT _ (TS _ 2) }
	')'            { PT _ (TS _ 3) }
	'+'            { PT _ (TS _ 4) }
	','            { PT _ (TS _ 5) }
	'-'            { PT _ (TS _ 6) }
	'='            { PT _ (TS _ 7) }
	'['            { PT _ (TS _ 8) }
	'\\%\\operatorname{of}'{ PT _ (TS _ 9) }
	'\\cdot'       { PT _ (TS _ 10) }
	'\\cos\\left(' { PT _ (TS _ 11) }
	'\\cos^{-1}\\left('{ PT _ (TS _ 12) }
	'\\frac{'      { PT _ (TS _ 13) }
	'\\left|'      { PT _ (TS _ 14) }
	'\\ln'         { PT _ (TS _ 15) }
	'\\log'        { PT _ (TS _ 16) }
	'\\operatorname{mean}\\left('{ PT _ (TS _ 17) }
	'\\operatorname{nCr}\\left('{ PT _ (TS _ 18) }
	'\\operatorname{nPr}\\left('{ PT _ (TS _ 19) }
	'\\operatorname{round}\\left('{ PT _ (TS _ 20) }
	'\\operatorname{stdevp}\\left('{ PT _ (TS _ 21) }
	'\\operatorname{stdev}\\left('{ PT _ (TS _ 22) }
	'\\pi'         { PT _ (TS _ 23) }
	'\\right)'     { PT _ (TS _ 24) }
	'\\right|'     { PT _ (TS _ 25) }
	'\\sin\\left(' { PT _ (TS _ 26) }
	'\\sin^{-1}\\left('{ PT _ (TS _ 27) }
	'\\sqrt['      { PT _ (TS _ 28) }
	'\\sqrt{'      { PT _ (TS _ 29) }
	'\\tan\\left(' { PT _ (TS _ 30) }
	'\\tan^{-1}\\left('{ PT _ (TS _ 31) }
	']'            { PT _ (TS _ 32) }
	']{'           { PT _ (TS _ 33) }
	'^{'           { PT _ (TS _ 34) }
	'e'            { PT _ (TS _ 35) }
	'}'            { PT _ (TS _ 36) }
	'}{'           { PT _ (TS _ 37) }
	L_doubl        { PT _ (TD $$) }
	L_integ        { PT _ (TI $$) }
	L_Id           { PT _ (T_Id $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pExp1    rule  0
	%start_pExp2    rule  1
	%start_pExp3    rule  2
	%start_pExp4    rule  3
	%start_pExp5    rule  4
	%start_pExp6    rule  5
	%start_pExp7    rule  6
	%start_pExp8    rule  7
	%start_pExp9    rule  8
	%start_pExp10   rule  9
	%start_pExp     rule  10
	%start_pExp11   rule  11
	Double          rule  12
	Integer         rule  13
	Id              rule  14
	Exp1            rules 15, 16
	Exp2            rules 17, 18, 19
	Exp3            rules 20, 21, 22, 23, 24
	Exp4            rules 25, 26, 27, 28
	Exp5            rules 29, 30, 31, 32, 33, 34, 35, 36, 37
	Exp6            rules 38, 39, 40, 41, 42, 43, 44, 45
	Exp7            rules 46, 47
	Exp8            rules 48, 49, 50, 51
	Exp9            rules 52, 53, 54, 55, 56
	Exp10           rules 57, 58
	Exp             rule  59
	Exp11           rule  60

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_pExp1 -> . Exp1                              (rule 0)

	'('            shift, and enter state 15
	'-'            shift, and enter state 31
	'['            shift, and enter state 32
	'\\cos\\left(' shift, and enter state 33
	'\\cos^{-1}\\left('shift, and enter state 34
	'\\frac{'      shift, and enter state 35
	'\\left|'      shift, and enter state 36
	'\\ln'         shift, and enter state 37
	'\\log'        shift, and enter state 38
	'\\operatorname{mean}\\left('shift, and enter state 39
	'\\operatorname{nCr}\\left('shift, and enter state 40
	'\\operatorname{nPr}\\left('shift, and enter state 41
	'\\operatorname{round}\\left('shift, and enter state 42
	'\\operatorname{stdevp}\\left('shift, and enter state 43
	'\\operatorname{stdev}\\left('shift, and enter state 44
	'\\pi'         shift, and enter state 45
	'\\sin\\left(' shift, and enter state 46
	'\\sin^{-1}\\left('shift, and enter state 47
	'\\sqrt['      shift, and enter state 48
	'\\sqrt{'      shift, and enter state 49
	'\\tan\\left(' shift, and enter state 50
	'\\tan^{-1}\\left('shift, and enter state 51
	'e'            shift, and enter state 52
	L_doubl        shift, and enter state 13
	L_integ        shift, and enter state 53
	L_Id           shift, and enter state 54

	Double         goto state 16
	Integer        goto state 17
	Id             goto state 18
	Exp1           goto state 64
	Exp2           goto state 20
	Exp3           goto state 21
	Exp4           goto state 22
	Exp5           goto state 23
	Exp6           goto state 24
	Exp7           goto state 25
	Exp8           goto state 26
	Exp9           goto state 27
	Exp10          goto state 28
	Exp11          goto state 30

State 1

	%start_pExp2 -> . Exp2                              (rule 1)

	'('            shift, and enter state 15
	'-'            shift, and enter state 31
	'['            shift, and enter state 32
	'\\cos\\left(' shift, and enter state 33
	'\\cos^{-1}\\left('shift, and enter state 34
	'\\frac{'      shift, and enter state 35
	'\\left|'      shift, and enter state 36
	'\\ln'         shift, and enter state 37
	'\\log'        shift, and enter state 38
	'\\operatorname{mean}\\left('shift, and enter state 39
	'\\operatorname{nCr}\\left('shift, and enter state 40
	'\\operatorname{nPr}\\left('shift, and enter state 41
	'\\operatorname{round}\\left('shift, and enter state 42
	'\\operatorname{stdevp}\\left('shift, and enter state 43
	'\\operatorname{stdev}\\left('shift, and enter state 44
	'\\pi'         shift, and enter state 45
	'\\sin\\left(' shift, and enter state 46
	'\\sin^{-1}\\left('shift, and enter state 47
	'\\sqrt['      shift, and enter state 48
	'\\sqrt{'      shift, and enter state 49
	'\\tan\\left(' shift, and enter state 50
	'\\tan^{-1}\\left('shift, and enter state 51
	'e'            shift, and enter state 52
	L_doubl        shift, and enter state 13
	L_integ        shift, and enter state 53
	L_Id           shift, and enter state 54

	Double         goto state 16
	Integer        goto state 17
	Id             goto state 18
	Exp2           goto state 63
	Exp3           goto state 21
	Exp4           goto state 22
	Exp5           goto state 23
	Exp6           goto state 24
	Exp7           goto state 25
	Exp8           goto state 26
	Exp9           goto state 27
	Exp10          goto state 28
	Exp11          goto state 30

State 2

	%start_pExp3 -> . Exp3                              (rule 2)

	'('            shift, and enter state 15
	'-'            shift, and enter state 31
	'['            shift, and enter state 32
	'\\cos\\left(' shift, and enter state 33
	'\\cos^{-1}\\left('shift, and enter state 34
	'\\frac{'      shift, and enter state 35
	'\\left|'      shift, and enter state 36
	'\\ln'         shift, and enter state 37
	'\\log'        shift, and enter state 38
	'\\operatorname{mean}\\left('shift, and enter state 39
	'\\operatorname{nCr}\\left('shift, and enter state 40
	'\\operatorname{nPr}\\left('shift, and enter state 41
	'\\operatorname{round}\\left('shift, and enter state 42
	'\\operatorname{stdevp}\\left('shift, and enter state 43
	'\\operatorname{stdev}\\left('shift, and enter state 44
	'\\pi'         shift, and enter state 45
	'\\sin\\left(' shift, and enter state 46
	'\\sin^{-1}\\left('shift, and enter state 47
	'\\sqrt['      shift, and enter state 48
	'\\sqrt{'      shift, and enter state 49
	'\\tan\\left(' shift, and enter state 50
	'\\tan^{-1}\\left('shift, and enter state 51
	'e'            shift, and enter state 52
	L_doubl        shift, and enter state 13
	L_integ        shift, and enter state 53
	L_Id           shift, and enter state 54

	Double         goto state 16
	Integer        goto state 17
	Id             goto state 18
	Exp3           goto state 62
	Exp4           goto state 22
	Exp5           goto state 23
	Exp6           goto state 24
	Exp7           goto state 25
	Exp8           goto state 26
	Exp9           goto state 27
	Exp10          goto state 28
	Exp11          goto state 30

State 3

	%start_pExp4 -> . Exp4                              (rule 3)

	'('            shift, and enter state 15
	'['            shift, and enter state 32
	'\\cos\\left(' shift, and enter state 33
	'\\cos^{-1}\\left('shift, and enter state 34
	'\\left|'      shift, and enter state 36
	'\\ln'         shift, and enter state 37
	'\\log'        shift, and enter state 38
	'\\operatorname{mean}\\left('shift, and enter state 39
	'\\operatorname{nCr}\\left('shift, and enter state 40
	'\\operatorname{nPr}\\left('shift, and enter state 41
	'\\operatorname{round}\\left('shift, and enter state 42
	'\\operatorname{stdevp}\\left('shift, and enter state 43
	'\\operatorname{stdev}\\left('shift, and enter state 44
	'\\pi'         shift, and enter state 45
	'\\sin\\left(' shift, and enter state 46
	'\\sin^{-1}\\left('shift, and enter state 47
	'\\sqrt['      shift, and enter state 48
	'\\sqrt{'      shift, and enter state 49
	'\\tan\\left(' shift, and enter state 50
	'\\tan^{-1}\\left('shift, and enter state 51
	'e'            shift, and enter state 52
	L_doubl        shift, and enter state 13
	L_integ        shift, and enter state 53
	L_Id           shift, and enter state 54

	Double         goto state 16
	Integer        goto state 17
	Id             goto state 18
	Exp4           goto state 61
	Exp5           goto state 23
	Exp6           goto state 24
	Exp7           goto state 25
	Exp8           goto state 26
	Exp9           goto state 27
	Exp10          goto state 28
	Exp11          goto state 30

State 4

	%start_pExp5 -> . Exp5                              (rule 4)

	'('            shift, and enter state 15
	'['            shift, and enter state 32
	'\\cos\\left(' shift, and enter state 33
	'\\cos^{-1}\\left('shift, and enter state 34
	'\\left|'      shift, and enter state 36
	'\\ln'         shift, and enter state 37
	'\\log'        shift, and enter state 38
	'\\operatorname{mean}\\left('shift, and enter state 39
	'\\operatorname{nCr}\\left('shift, and enter state 40
	'\\operatorname{nPr}\\left('shift, and enter state 41
	'\\operatorname{round}\\left('shift, and enter state 42
	'\\operatorname{stdevp}\\left('shift, and enter state 43
	'\\operatorname{stdev}\\left('shift, and enter state 44
	'\\pi'         shift, and enter state 45
	'\\sin\\left(' shift, and enter state 46
	'\\sin^{-1}\\left('shift, and enter state 47
	'\\tan\\left(' shift, and enter state 50
	'\\tan^{-1}\\left('shift, and enter state 51
	'e'            shift, and enter state 52
	L_doubl        shift, and enter state 13
	L_integ        shift, and enter state 53
	L_Id           shift, and enter state 54

	Double         goto state 16
	Integer        goto state 17
	Id             goto state 18
	Exp5           goto state 60
	Exp6           goto state 24
	Exp7           goto state 25
	Exp8           goto state 26
	Exp9           goto state 27
	Exp10          goto state 28
	Exp11          goto state 30

State 5

	%start_pExp6 -> . Exp6                              (rule 5)

	'('            shift, and enter state 15
	'['            shift, and enter state 32
	'\\left|'      shift, and enter state 36
	'\\operatorname{mean}\\left('shift, and enter state 39
	'\\operatorname{nCr}\\left('shift, and enter state 40
	'\\operatorname{nPr}\\left('shift, and enter state 41
	'\\operatorname{round}\\left('shift, and enter state 42
	'\\operatorname{stdevp}\\left('shift, and enter state 43
	'\\operatorname{stdev}\\left('shift, and enter state 44
	'\\pi'         shift, and enter state 45
	'e'            shift, and enter state 52
	L_doubl        shift, and enter state 13
	L_integ        shift, and enter state 53
	L_Id           shift, and enter state 54

	Double         goto state 16
	Integer        goto state 17
	Id             goto state 18
	Exp6           goto state 59
	Exp7           goto state 25
	Exp8           goto state 26
	Exp9           goto state 27
	Exp10          goto state 28
	Exp11          goto state 30

State 6

	%start_pExp7 -> . Exp7                              (rule 6)

	'('            shift, and enter state 15
	'['            shift, and enter state 32
	'\\left|'      shift, and enter state 36
	'\\pi'         shift, and enter state 45
	'e'            shift, and enter state 52
	L_doubl        shift, and enter state 13
	L_integ        shift, and enter state 53
	L_Id           shift, and enter state 54

	Double         goto state 16
	Integer        goto state 17
	Id             goto state 18
	Exp7           goto state 58
	Exp8           goto state 26
	Exp9           goto state 27
	Exp10          goto state 28
	Exp11          goto state 30

State 7

	%start_pExp8 -> . Exp8                              (rule 7)

	'('            shift, and enter state 15
	'['            shift, and enter state 32
	'\\pi'         shift, and enter state 45
	'e'            shift, and enter state 52
	L_doubl        shift, and enter state 13
	L_integ        shift, and enter state 53
	L_Id           shift, and enter state 54

	Double         goto state 16
	Integer        goto state 17
	Id             goto state 18
	Exp8           goto state 57
	Exp9           goto state 27
	Exp10          goto state 28
	Exp11          goto state 30

State 8

	%start_pExp9 -> . Exp9                              (rule 8)

	'('            shift, and enter state 15
	'\\pi'         shift, and enter state 45
	'e'            shift, and enter state 52
	L_doubl        shift, and enter state 13
	L_integ        shift, and enter state 53
	L_Id           shift, and enter state 54

	Double         goto state 16
	Integer        goto state 17
	Id             goto state 18
	Exp9           goto state 56
	Exp10          goto state 28
	Exp11          goto state 30

State 9

	%start_pExp10 -> . Exp10                            (rule 9)

	'('            shift, and enter state 15
	L_Id           shift, and enter state 54

	Id             goto state 18
	Exp10          goto state 55
	Exp11          goto state 30

State 10

	%start_pExp -> . Exp                                (rule 10)

	'('            shift, and enter state 15
	'-'            shift, and enter state 31
	'['            shift, and enter state 32
	'\\cos\\left(' shift, and enter state 33
	'\\cos^{-1}\\left('shift, and enter state 34
	'\\frac{'      shift, and enter state 35
	'\\left|'      shift, and enter state 36
	'\\ln'         shift, and enter state 37
	'\\log'        shift, and enter state 38
	'\\operatorname{mean}\\left('shift, and enter state 39
	'\\operatorname{nCr}\\left('shift, and enter state 40
	'\\operatorname{nPr}\\left('shift, and enter state 41
	'\\operatorname{round}\\left('shift, and enter state 42
	'\\operatorname{stdevp}\\left('shift, and enter state 43
	'\\operatorname{stdev}\\left('shift, and enter state 44
	'\\pi'         shift, and enter state 45
	'\\sin\\left(' shift, and enter state 46
	'\\sin^{-1}\\left('shift, and enter state 47
	'\\sqrt['      shift, and enter state 48
	'\\sqrt{'      shift, and enter state 49
	'\\tan\\left(' shift, and enter state 50
	'\\tan^{-1}\\left('shift, and enter state 51
	'e'            shift, and enter state 52
	L_doubl        shift, and enter state 13
	L_integ        shift, and enter state 53
	L_Id           shift, and enter state 54

	Double         goto state 16
	Integer        goto state 17
	Id             goto state 18
	Exp1           goto state 19
	Exp2           goto state 20
	Exp3           goto state 21
	Exp4           goto state 22
	Exp5           goto state 23
	Exp6           goto state 24
	Exp7           goto state 25
	Exp8           goto state 26
	Exp9           goto state 27
	Exp10          goto state 28
	Exp            goto state 29
	Exp11          goto state 30

State 11

	%start_pExp11 -> . Exp11                            (rule 11)

	'('            shift, and enter state 15

	Exp11          goto state 14

State 12

	Double -> . L_doubl                                 (rule 12)

	L_doubl        shift, and enter state 13


State 13

	Double -> L_doubl .                                 (rule 12)

	'!'            reduce using rule 12
	')'            reduce using rule 12
	'+'            reduce using rule 12
	','            reduce using rule 12
	'-'            reduce using rule 12
	'='            reduce using rule 12
	'['            reduce using rule 12
	'\\%\\operatorname{of}'reduce using rule 12
	'\\cdot'       reduce using rule 12
	'\\right)'     reduce using rule 12
	'\\right|'     reduce using rule 12
	']'            reduce using rule 12
	']{'           reduce using rule 12
	'^{'           reduce using rule 12
	'}'            reduce using rule 12
	'}{'           reduce using rule 12
	%eof           reduce using rule 12


State 14

	%start_pExp11 -> Exp11 .                            (rule 11)

	%eof           accept


State 15

	Exp11 -> '(' . Exp ')'                              (rule 60)

	'('            shift, and enter state 15
	'-'            shift, and enter state 31
	'['            shift, and enter state 32
	'\\cos\\left(' shift, and enter state 33
	'\\cos^{-1}\\left('shift, and enter state 34
	'\\frac{'      shift, and enter state 35
	'\\left|'      shift, and enter state 36
	'\\ln'         shift, and enter state 37
	'\\log'        shift, and enter state 38
	'\\operatorname{mean}\\left('shift, and enter state 39
	'\\operatorname{nCr}\\left('shift, and enter state 40
	'\\operatorname{nPr}\\left('shift, and enter state 41
	'\\operatorname{round}\\left('shift, and enter state 42
	'\\operatorname{stdevp}\\left('shift, and enter state 43
	'\\operatorname{stdev}\\left('shift, and enter state 44
	'\\pi'         shift, and enter state 45
	'\\sin\\left(' shift, and enter state 46
	'\\sin^{-1}\\left('shift, and enter state 47
	'\\sqrt['      shift, and enter state 48
	'\\sqrt{'      shift, and enter state 49
	'\\tan\\left(' shift, and enter state 50
	'\\tan^{-1}\\left('shift, and enter state 51
	'e'            shift, and enter state 52
	L_doubl        shift, and enter state 13
	L_integ        shift, and enter state 53
	L_Id           shift, and enter state 54

	Double         goto state 16
	Integer        goto state 17
	Id             goto state 18
	Exp1           goto state 19
	Exp2           goto state 20
	Exp3           goto state 21
	Exp4           goto state 22
	Exp5           goto state 23
	Exp6           goto state 24
	Exp7           goto state 25
	Exp8           goto state 26
	Exp9           goto state 27
	Exp10          goto state 28
	Exp            goto state 94
	Exp11          goto state 30

State 16

	Exp9 -> Double .                                    (rule 55)

	'!'            reduce using rule 55
	')'            reduce using rule 55
	'+'            reduce using rule 55
	','            reduce using rule 55
	'-'            reduce using rule 55
	'='            reduce using rule 55
	'['            reduce using rule 55
	'\\%\\operatorname{of}'reduce using rule 55
	'\\cdot'       reduce using rule 55
	'\\right)'     reduce using rule 55
	'\\right|'     reduce using rule 55
	']'            reduce using rule 55
	']{'           reduce using rule 55
	'^{'           reduce using rule 55
	'}'            reduce using rule 55
	'}{'           reduce using rule 55
	%eof           reduce using rule 55


State 17

	Exp9 -> Integer .                                   (rule 54)

	'!'            reduce using rule 54
	')'            reduce using rule 54
	'+'            reduce using rule 54
	','            reduce using rule 54
	'-'            reduce using rule 54
	'='            reduce using rule 54
	'['            reduce using rule 54
	'\\%\\operatorname{of}'reduce using rule 54
	'\\cdot'       reduce using rule 54
	'\\right)'     reduce using rule 54
	'\\right|'     reduce using rule 54
	']'            reduce using rule 54
	']{'           reduce using rule 54
	'^{'           reduce using rule 54
	'}'            reduce using rule 54
	'}{'           reduce using rule 54
	%eof           reduce using rule 54


State 18

	Exp10 -> Id .                                       (rule 57)

	'!'            reduce using rule 57
	')'            reduce using rule 57
	'+'            reduce using rule 57
	','            reduce using rule 57
	'-'            reduce using rule 57
	'='            reduce using rule 57
	'['            reduce using rule 57
	'\\%\\operatorname{of}'reduce using rule 57
	'\\cdot'       reduce using rule 57
	'\\right)'     reduce using rule 57
	'\\right|'     reduce using rule 57
	']'            reduce using rule 57
	']{'           reduce using rule 57
	'^{'           reduce using rule 57
	'}'            reduce using rule 57
	'}{'           reduce using rule 57
	%eof           reduce using rule 57


State 19

	Exp1 -> Exp1 . '=' Exp2                             (rule 15)
	Exp -> Exp1 .                                       (rule 59)

	')'            reduce using rule 59
	'='            shift, and enter state 65
	%eof           reduce using rule 59


State 20

	Exp1 -> Exp2 .                                      (rule 16)
	Exp2 -> Exp2 . '+' Exp3                             (rule 17)
	Exp2 -> Exp2 . '-' Exp3                             (rule 18)

	')'            reduce using rule 16
	'+'            shift, and enter state 66
	'-'            shift, and enter state 67
	'='            reduce using rule 16
	%eof           reduce using rule 16


State 21

	Exp2 -> Exp3 .                                      (rule 19)
	Exp3 -> Exp3 . '\\cdot' Exp4                        (rule 20)

	')'            reduce using rule 19
	'+'            reduce using rule 19
	'-'            reduce using rule 19
	'='            reduce using rule 19
	'\\cdot'       shift, and enter state 68
	%eof           reduce using rule 19


State 22

	Exp3 -> Exp4 . '!'                                  (rule 22)
	Exp3 -> Exp4 .                                      (rule 24)
	Exp4 -> Exp4 . '^{' Exp5 '}'                        (rule 25)

	'!'            shift, and enter state 93
	')'            reduce using rule 24
	'+'            reduce using rule 24
	'-'            reduce using rule 24
	'='            reduce using rule 24
	'\\cdot'       reduce using rule 24
	'^{'           shift, and enter state 69
	'}{'           reduce using rule 24
	%eof           reduce using rule 24


State 23

	Exp4 -> Exp5 .                                      (rule 28)

	'!'            reduce using rule 28
	')'            reduce using rule 28
	'+'            reduce using rule 28
	'-'            reduce using rule 28
	'='            reduce using rule 28
	'\\cdot'       reduce using rule 28
	'^{'           reduce using rule 28
	'}'            reduce using rule 28
	'}{'           reduce using rule 28
	%eof           reduce using rule 28


State 24

	Exp5 -> Exp6 .                                      (rule 37)

	'!'            reduce using rule 37
	')'            reduce using rule 37
	'+'            reduce using rule 37
	'-'            reduce using rule 37
	'='            reduce using rule 37
	'\\cdot'       reduce using rule 37
	'^{'           reduce using rule 37
	'}'            reduce using rule 37
	'}{'           reduce using rule 37
	%eof           reduce using rule 37


State 25

	Exp6 -> Exp7 . '\\%\\operatorname{of}' Exp8         (rule 44)
	Exp6 -> Exp7 .                                      (rule 45)
